k8s/istio/destination-rules.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: dr-service-a
  namespace: devops
spec:
  host: service-a
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: dr-service-c
  namespace: devops
spec:
  host: service-c
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: dr-service-b
  namespace: devops
spec:
  host: service-b
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: dr-frontend-gateway
  namespace: devops
spec:
  host: frontend-gateway
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
